fix(app): Add overflow scroll in grid of images

--- a/app/assets/style.css
+++ b/app/assets/style.css
@@ -80,6 +80,8 @@ body {
   grid-gap: 7px;
   grid-row-gap: 7px;
   width: 100%;
+  max-height: 75vh;
+  overflow-y: auto;
   /* padding: 20px; */
   grid-auto-rows: min-content;
   /* background-color: mintcream; */
@@ -126,7 +128,7 @@ body {
 
 .selected-image {
   max-width: 100%;
-  height: auto;
+  max-height: 75vh;
   /* width: auto; */
   /* flex-shrink: 1; */
   cursor: pointer;
